--- a/src/pages/sortable-list/index.wxml
+++ b/src/pages/sortable-list/index.wxml
@@ -1,10 +1,12 @@
 <view class="container">
-  <ui-sortable-list items="{{ sortableList }}">
+  <ui-sortable-list 
+    bind:change="bindSortChange"
+    items="{{ sortableList }}">
     <view 
       class="sortable-item"
       wx:for="{{ sortableList }}" 
       wx:key="index" 
-      style="background-color: rgba({{ 255 - index * 40 }}, {{ index * 30 }}, {{ index * 40 }}, 1);"
+      style="background-color: {{ item.color }};"
       slot="{{ item.sortId }}">
       {{item.sortId}}
     </view>
