--- a/src/components/sortable-list/index.less
+++ b/src/components/sortable-list/index.less
@@ -1,15 +1,24 @@
-.ui-sortable-list {
+.ui-sortable {
   width: 100%;
   position: relative;
-}
 
-.ui-sortable-item {
-  position: absolute;
-  left: 0;
-  right: 0;
-  z-index: 0;
+  &-item {
+    position: absolute;
+    left: 0;
+    right: 0;
+    z-index: 0;
+  }
 
-  &__transition {
-    transition: transform ease .3s;
+  &__movable-view {
+    position: absolute;
+    z-index: 10;
+    left: 0;
+    right: 0;
+  }
+
+  &--transition {
+    .ui-sortable-item {
+      transition: transform ease .2s;
+    }
   }
 }
