--- a/src/components/swipeout/index.less
+++ b/src/components/swipeout/index.less
@@ -5,14 +5,8 @@
 
   &__view {
     position: relative;
-  }
-
-  &__left {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    transform: translateX(-100%);
+    transform: translateX(-180px);
+    width: 100%;
   }
 
   &__right {
