--- a/src/components/swipeout/index.less
+++ b/src/components/swipeout/index.less
@@ -5,8 +5,9 @@
 
   &__view {
     position: relative;
-    transform: translateX(-180px);
     width: 100%;
+    transition-timing-function: ease-out;
+    -webkit-transition-timing-function: ease-out;
   }
 
   &__right {
